# FWA_DZ2

./: .gitignore  .~lock.cppМоряков_ВЮ_ИУК_4_82_Б_2026_Фреймворки_WEB_приложений.odt#  CMakeLists.txt  README.md  cppМоряков_ВЮ_ИУК_4_82_Б_2026_Фреймворки_WEB_приложений.odt  index.html  package-lock.json  package.json  report.py  report.txt  Моряков_ВЮ_ИУК_4_82_Б_2026_Фреймворки_WEB_приложений.docx  Моряков_ВЮ_ИУК_4_82_Б_2026_Фреймворки_WEB_приложений.odt
.tools/wasi-sdk-29.0-x86_64-linux/: VERSION
.tools/wasi-sdk-29.0-x86_64-linux/share/wasi-sysroot/include/wasm32-wasi-threads/c++/v1/: module.modulemap
.tools/wasi-sdk-29.0-x86_64-linux/share/wasi-sysroot/include/wasm32-wasip2/c++/v1/: __config_site
cmake/: wasi-sdk-toolchain.cmake
cpp-wasm/: Graph.cpp  Graph.h  Path_Finder.cpp  Shortest_Path_Finder.cpp  Shortest_Path_Finder.h  graph.cpp  graph.h  path_finder.cpp  shortest_path_finder.cpp  shortest_path_finder.h  wasm_runtime.cpp  wasm_runtime.h
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs  pathfinding.rs  visualization.rs
scripts/: build-wasm.sh
src/: Graph.js  Graph_Generator.js  Shortest_Path_Finder.js  graph.js  main.js  style.css
src/wasm/: .gitignore  path_finder_wasm.js
